[package]
name = "open_proxies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
version = "1.0.3"
features = ["net", "time","sync", "process", "macros", "rt", "rt-multi-thread"] 
[dependencies.futures]
version = "0.3.25"
[dependencies.async-std]
version = "1.12.0"
[dependencies.rayon]
version = "1.5"
[dependencies.socks]
version = "0.3.4"
[dependencies.regex]
version = "1"
[dependencies.httparse]
version = "1.8.0"
[dependencies.clap]
version = "4.0.18"
features = ["cargo", "color"]
[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]