[package]
name = "open_proxies"
version = "0.1.1"
edition = "2021"
homepage = "https://km8oz.github.io/open_proxies"
license = "Apache-2.0"
repository = "https://github.com/KM8Oz/open_proxies.git"
license-file = "LICENCE.md"
keywords = ["proxy", "validator", "open", "checker", "free_proxies"]
description = "Simple and fast proxy checker that include protocol validation"
readme = "README.md"

[dependencies.tokio]
version = "1.23.1"
features = ["net", "time","sync", "process", "macros", "rt", "rt-multi-thread"] 
[dependencies.futures]
version = "0.3.25"
[dependencies.async-std]
version = "1.12.0"
[dependencies.rayon]
version = "1.5"
[dependencies.socks]
version = "0.3.4"
[dependencies.regex]
version = "1"
[dependencies.httparse]
version = "1.8.0"
[dependencies.clap]
version = "4.0.18"
features = ["cargo", "color"]
[dependencies.async-tls]
version = "0.11.0"
default-features = false
features = ["client"]